fix vh on iphone

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,6 +8,11 @@
 body {
 	background-color: #DCDCDC;
 	margin: 0 auto;
+	min-height: 100vh;
+	height: -webkit-fill-available;
+}
+
+html {
 	height: -webkit-fill-available;
 }
 
